basic_services/consumer/consumer-deployment.prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  namespace: leaf-image-management-system
  labels:
    app: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
        - name: consumer
          image: kunren01/consumer:1.0  #todo
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      restartPolicy: Always
