basic_services/consumer/consumer-service.prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer
  namespace: leaf-image-management-system
spec:
  selector:
    app: consumer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
