basic_services/consumer/consumer-service.stg.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer
  namespace: leaf-image-management-system
spec:
  selector:
    app: consumer
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32222
