basic_services/consumer/consumer-ingress.prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  consumer-ingress
  namespace: leaf-image-management-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /image-plant/(.*)
            pathType: Prefix
            backend:
              service:
                name: consumer
                port:
                  number: 80
